package io.audit.core

class AuditLoggingException(message: String, cause: Throwable?) : RuntimeException(message, cause)
